[package]
name = "rinse"
version = "0.1.0"
edition = "2024"

[features]
default = []
tcp = []
tokio = ["dep:tokio", "tcp"]

[dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4"
rand = "0.8"
rmp-serde = "1.3"
rmpv = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
bzip2 = "0.5"
tokio = { version = "1", features = ["sync", "time", "io-util", "net", "rt", "macros"], optional = true }
