[package]
name = "rinse"
version = "0.1.0"
edition = "2024"

[features]
default = []
tcp = []
tokio = ["dep:tokio", "dep:env_logger", "tcp"]
config = ["dep:toml"]
relay = ["tokio", "config", "dep:serde_json", "dep:simplelog", "dep:ratatui", "dep:crossterm"]

[dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4"
rand = "0.8"
rmp-serde = "1.3"
rmpv = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
bzip2 = "0.5"
tokio = { version = "1", features = ["sync", "time", "io-util", "net", "rt", "rt-multi-thread", "macros", "fs", "signal"], optional = true }
env_logger = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
simplelog = { version = "0.12", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[[bin]]
name = "rinse-serve"
path = "src/bin/serve.rs"
required-features = ["tokio"]

[[bin]]
name = "rinse-relay"
path = "src/bin/relay.rs"
required-features = ["relay"]

[[bin]]
name = "rinse-request"
path = "src/bin/request.rs"
required-features = ["tokio"]

# [[bin]]
# name = "rinse-cp"
# path = "src/bin/cp.rs"
# required-features = ["tokio"]

[dev-dependencies]
env_logger = "0.11"
