[package]
name = "rinse"
version = "0.1.0"
edition = "2024"

[features]
default = []
tcp = []
tokio = ["dep:tokio", "dep:env_logger", "tcp"]
config = ["dep:toml"]
relay = ["tokio", "config", "dep:serde_json", "dep:simplelog", "dep:ratatui", "dep:crossterm"]
iroh = ["dep:iroh", "dep:tokio"]
nomad = ["tokio", "config", "dep:simplelog", "dep:ratatui", "dep:crossterm", "dep:micronaut", "dep:tui-input", "dep:cli-clipboard", "dep:unicode-width", "dep:tokio-util", "dep:thiserror"]

[dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4"
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4"
rand = "0.8"
rmp-serde = "1.3"
rmpv = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
bzip2 = "0.5"
tokio = { version = "1", features = ["sync", "time", "io-util", "net", "rt", "rt-multi-thread", "macros", "fs", "signal"], optional = true }
env_logger = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
simplelog = { version = "0.12", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
iroh = { version = "0.32", optional = true }

# nomad
micronaut = { git = "https://github.com/cyypherus/micronaut", features = ["ratatui"], optional = true }
tui-input = { version = "0.15", optional = true }
cli-clipboard = { version = "0.4", optional = true }
unicode-width = { version = "0.2", optional = true }
tokio-util = { version = "0.7", optional = true }
thiserror = { version = "1", optional = true }

[[bin]]
name = "rinse-serve"
path = "src/bin/serve.rs"
required-features = ["tokio", "config"]

[[bin]]
name = "rinse-relay"
path = "src/bin/relay.rs"
required-features = ["relay"]

[[bin]]
name = "rinse-request"
path = "src/bin/request.rs"
required-features = ["tokio"]

[[bin]]
name = "rncp"
path = "src/bin/rncp.rs"
required-features = ["tokio"]

[[bin]]
name = "page"
path = "src/bin/page/main.rs"
required-features = ["tokio", "config"]

[[bin]]
name = "nomad"
path = "src/bin/nomad/main.rs"
required-features = ["nomad"]

[dev-dependencies]
env_logger = "0.11"
